--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cryptum-api-layer",
   "version": "0.0.1",
-  "description": "cryptum-api-layer",
+  "title": "Cryptum API Layer",
+  "description": "Cryptum API Layer",
   "author": "Blockforce",
   "private": true,
   "license": "MIT",
@@ -29,9 +30,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/platform-fastify": "^8.1.1",
+    "@nestjs/swagger": "^5.1.4",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cryptum-sdk": "^0.0.14",
+    "fastify-swagger": "^4.12.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0"
