--- a/.env-sample
+++ b/.env-sample
@@ -3,3 +3,18 @@ PORT="8080"
 
 CRYPTUM_ENVIRONMENT="development"
 CRYPTUM_API_KEY=""
+LOCAL_PASSWORD=""
+LOCAL_PATH=""
+DB_URL=""
+
+AZURE_TENANT_ID=""
+AZURE_CLIENT_ID=""
+AZURE_CLIENT_SECRET=""
+AZURE_KEY_VAULT_NAME=""
+AZURE_SECRET_NAME=""
+AZURE_SECRET_VERSION=""
+
+AWS_REGION=""
+AWS_ACCESS_ID=""
+AWS_SECRET_KEY=""
+AWS_SECRET_ID=""
