--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start": "node dist/main",
-    "build-start": "npm run build && node dist/main.js --saveWallets --useDb",
+    "build-start": "npm run build && node dist/main.js --saveWallets --useDb --azure",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
