--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -10,12 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:  
-      - name: Checkout repo backend
-        uses: actions/checkout@v2
-        with:
-         repository: maxafu/cryptum-api-connector
-         token: ${{ secrets.PAT }}
-         ref: master
+      - uses: actions/checkout@v2
 
       - name: Sync and merge upstream repository with your current repository
         uses: dabreadman/sync-upstream-repo@v1.0.0.b
