--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -16,7 +16,7 @@ jobs:
         uses: dabreadman/sync-upstream-repo@v1.0.0.b
         with:
           # URL of gitHub public upstream repo
-          upstream_repo: https://github.com/blockforce-official/cryptum-api-connector
+          upstream_repo: github.com/blockforce-official/cryptum-api-connector
           # Branch to merge from upstream (defaults to downstream branch)
           upstream_branch: master
           # Branch to merge into downstream
