--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -12,14 +12,25 @@ jobs:
     steps:  
       - uses: actions/checkout@v2
 
-      - name: Sync and merge upstream repository with your current repository
-        uses: dabreadman/sync-upstream-repo@v1.0.0.b
-        with:
+     # - name: Sync and merge upstream repository with your current repository
+      #  uses: dabreadman/sync-upstream-repo@v1.0.0.b
+       # with:
           # URL of gitHub public upstream repo
-          upstream_repo: "https://github.com/maxafu/blockforce-official/cryptum-api-connector"
+        #  upstream_repo: "https://github.com/maxafu/blockforce-official/cryptum-api-connector"
           # Branch to merge from upstream (defaults to downstream branch)
-          upstream_branch: master
+         # upstream_branch: master
           # Branch to merge into downstream
-          downstream_branch: master 
+          #downstream_branch: master 
           # GitHub Bot token
-          token: ${{ secrets.GITHUB_TOKEN }}
+          #token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Sync repositories
+        # You may pin to the exact commit or the version.
+        # uses: somosprte/sync-repositories@613e9ca6b97685e6f0bd731547e6eedfc6b4bd3b
+        uses: somosprte/sync-repositories@0.0.1-ALPHA
+        with:
+          # Repository to receive data from you repository
+          distination: https://github.com/blockforce-official/cryptum-api-connector
+          # Your GitHub account username
+          username: maxafu
+          # Secret toeken registered in your GitHub Account
+          token_secret: ${{ secrets.GITHUB_TOKEN }}
