--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cryptum-api-connector",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "title": "Cryptum API Connector",
   "description": "Cryptum API Connector",
-  "author": "Blockforce",
+  "author": "Victor Municelli Dário, victor@cryptum.ios",
   "private": true,
   "main": "dist/main.js",
   "license": "MIT",
@@ -40,7 +40,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "crypto-js": "^4.1.1",
-    "cryptum-sdk": "0.0.44",
+    "cryptum-sdk": "0.0.45",
     "dotenv": "^10.0.0",
     "fastify": "^3.22.1",
     "fastify-swagger": "^4.12.6",
