--- a/.env-sample
+++ b/.env-sample
@@ -5,7 +5,7 @@ AUTH_API_KEY=""
 
 CRYPTUM_ENVIRONMENT="development"
 CRYPTUM_API_KEY=""
-LOCAL_PASSWORD=""
+LOCAL_SECRET=""
 LOCAL_PATH=""
 DB_URL=""
 
