--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "title": "Cryptum API Connector",
   "description": "Cryptum API Connector",
-  "author": "Victor Municelli Dário, victor@cryptum.ios",
+  "author": "Victor Municelli Dário, victor@cryptum.io",
   "private": true,
   "main": "dist/main.js",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start": "node dist/main",
+    "start": "NODE_ENV=production node dist/main.js",
     "build-start": "npm run build && node dist/main.js --saveWallets --useDb --azure",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "test": "jest",
