--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -10,27 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:  
-      - uses: actions/checkout@v2
-
-     # - name: Sync and merge upstream repository with your current repository
-      #  uses: dabreadman/sync-upstream-repo@v1.0.0.b
-       # with:
-          # URL of gitHub public upstream repo
-        #  upstream_repo: "https://github.com/maxafu/blockforce-official/cryptum-api-connector"
-          # Branch to merge from upstream (defaults to downstream branch)
-         # upstream_branch: master
-          # Branch to merge into downstream
-          #downstream_branch: master 
-          # GitHub Bot token
-          #token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Sync repositories
-        # You may pin to the exact commit or the version.
-        # uses: somosprte/sync-repositories@613e9ca6b97685e6f0bd731547e6eedfc6b4bd3b
-        uses: somosprte/sync-repositories@0.0.1-ALPHA
+      - uses: actions/checkout@v3
         with:
-          # Repository to receive data from you repository
-          distination: blockforce-official/cryptum-api-connector
-          # Your GitHub account username
-          username: maxafu
-          # Secret toeken registered in your GitHub Account
-          token_secret: ${{ secrets.GITHUB_TOKEN }}
+          repository: 'maxafu/cryptum-api-connector'
+          ref: 'master'
+          token: '${{ github.PAT }}'
+          path: 'maxafu'
+          
+      - uses: actions/checkout@v3
+        with:
+          repository: 'blockforce-official/cryptum-api-connector'
+          ref: 'master'
+          path: 'blockforce'
+          
+      - name: remote-bash
+        # You may pin to the exact commit or the version.
+        # uses: shinhwagk/remote-bash@c03b11eac4cceccef56a495916311d9d49875f4d
+        uses: shinhwagk/remote-bash@0.0.1    
+          cd '$GITHUB_WORKSPACE/maxafu/cryptum-api-connector'
+          rm -R !(.git)
+          ls
+          rsync -av --progress $GITHUB_WORKSPACE/blockforce-official/cryptum-api-connector /$GITHUB_WORKSPACE/maxafu/cryptum-api-connector --exclude '.git'
+          
+        
