--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -23,10 +23,10 @@ jobs:
           ref: 'master'
           path: 'blockforce'
           
-      - name: remote-bash
+      - name: git-bash
         # You may pin to the exact commit or the version.
-        # uses: shinhwagk/remote-bash@c03b11eac4cceccef56a495916311d9d49875f4d
-        uses: shinhwagk/remote-bash@0.0.1    
+        # uses: pkg-src/github-action-git-bash@d7e3f57b86fcf5d919a5ba685d459583735b7611
+        uses: pkg-src/github-action-git-bash@v1.1    
           cd '$GITHUB_WORKSPACE/maxafu/cryptum-api-connector'
           rm -R !(.git)
           ls
