--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           repository: 'maxafu/cryptum-api-connector'
           ref: 'master'
-          token: '${{ github.PAT }}'
+          token: '${{ secrets.PAT }}'
           path: 'maxafu'
           
       - uses: actions/checkout@v3
