--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -26,7 +26,9 @@ jobs:
       - name: git-bash
         run: |    
           cd '/home/runner/work/cryptum-api-connector/cryptum-api-connector/maxafu'
-          rm -R '!(*.git)'
+          GLOBIGNORE=*.git
+          rm -R *
+          unset GLOBIGNORE
           ls
           rsync -av --progress $GITHUB_WORKSPACE/blockforce-official/cryptum-api-connector /$GITHUB_WORKSPACE/maxafu/cryptum-api-connector --exclude '.git'
           
